--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   encrypt: ^5.0.3
   intl: ^0.19.0
   uuid: ^4.5.1
+  supabase_flutter: ^2.8.1
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
